--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: 12
+      - run: npm install -g firebase-tools
       - run: npm ci
       - run: npm test
       - run: npm run build
