--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,11 +8,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - uses: FirebaseExtended/action-hosting-deploy@v0
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
         with:
           node-version: 12
-      - run: npm install firebase
+      - run: firebase init hosting
       - run: npm ci
       - run: npm test
       - run: npm run build
