--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,22 +1,22 @@
-name: Deploy to Live Channel
+name: Firebase Continuous Deployment
 
 on:
   push:
-    branches:
-      - master
-    # Optionally configure to run only for specific files. For example:
-    # paths:
-    # - "website/**"
+    branches: [ master ]
 
 jobs:
-  deploy_live_website:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      # Add any build steps here. For example:
-      # - run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@master
         with:
-          firebaseServiceAccount: "${{ secrets.FIREBASE_TOKEN }}"
-          projectId: github-actions-demo-76fa9
-          channelId: live
+          node-version: 12
+      - run: npm ci
+      - run: npm test
+      - run: npm run build
+      - uses: w9jds/firebase-action@master
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        with:
+          args: deploy --only hosting
